[gd_scene load_steps=13 format=2]

[ext_resource path="res://images/menu.jpg" type="Texture" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]
[ext_resource path="res://images/button_active.png" type="Texture" id=3]
[ext_resource path="res://images/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://images/rate_button_up.png" type="Texture" id=5]
[ext_resource path="res://images/rate_button_down.png" type="Texture" id=6]
[ext_resource path="res://images/more_button_up.png" type="Texture" id=7]
[ext_resource path="res://images/more_button_down.png" type="Texture" id=8]
[ext_resource path="res://images/exit_button_up.png" type="Texture" id=9]
[ext_resource path="res://images/exit_button_down.png" type="Texture" id=10]
[ext_resource path="res://Achtung! Polizei.otf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="menu" type="Node" index="0"]

[node name="menu" type="Sprite" parent="." index="0"]

position = Vector2( 180.323, 320.19 )
scale = Vector2( 0.500242, 0.500242 )
texture = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 2 )

[node name="new_game" type="TextureButton" parent="GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 82.0
margin_top = 166.0
margin_right = 482.0
margin_bottom = 296.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="rate_us" type="TextureButton" parent="GUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 242.0
margin_right = 484.0
margin_bottom = 372.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="more_apps" type="TextureButton" parent="GUI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 85.0
margin_top = 318.0
margin_right = 485.0
margin_bottom = 448.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="exit" type="TextureButton" parent="GUI" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 87.0
margin_top = 394.0
margin_right = 487.0
margin_bottom = 524.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="GUI" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 107.0
margin_right = 280.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "YOU LOST"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]


